--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,7 @@
 html {
   box-sizing: border-box;
   background: rgb(25, 25, 25);
-  text-size-adjust: 100%;
+  scroll-behavior: smooth;
   line-height: 1.5;
   height: 100%;
 }
@@ -89,7 +89,7 @@ figcaption::before {
   content: 'figure: ';
 }
 
-.inlineMath{
+.inlineMath {
   font-size: 0.8rem;
 }
 
