--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,7 +33,7 @@ body {
   font-family: 'Inconsolata', sans-serif;
   text-rendering: optimizeLegibility;
   filter: var(--filter);
-  transition: color 0.3 ease-out 0.5, background 0.3 ease-out 0.5;
+  transition: all 0.3 ease-out 0.5;
 }
 
 body.dark {
