--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,6 +12,23 @@
   font-display: swap;
 }
 
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #808080; 
+  border-radius: 10px;
+}
+
 html {
   box-sizing: border-box;
 }
@@ -26,14 +43,16 @@ body {
   --inactiveLink: #a6a6a6;
   --codeblockTitle: #e6d9bb;
   --filter: opacity(1), contrast(1);
+
   margin: 0;
   height: 100%;
   background: var(--backgroundColor);
   color: var(--fontColor);
   font-family: 'Inconsolata', sans-serif;
   text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
   filter: var(--filter);
-  transition: all 1s ease-out;
+  transition: background 0.3s ease-in-out;
 }
 
 body.dark {
@@ -42,7 +61,6 @@ body.dark {
   --headerColor: white;
   --linkColor: #fbd8cd;
   --codeColor: #ff72b0;
-
   --activeLink: white;
   --inactiveLink: #808080;
   --codeblockTitle: #fff1d0;
