--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -75,7 +75,7 @@ main {
   -webkit-box-pack: justify;
   justify-content: space-between;
   padding: 2rem 0 2rem 0;
-  max-width: 768px;
+  max-width: 75ch;
   margin: auto;
 }
 
