code title bar color brighten

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,7 +40,7 @@ body {
   --codeColor: #a80079;
   --activeLink: #000000;
   --inactiveLink: #999999;
-  --codeblockTitle: #e6d9bb;
+  --codeblockTitle: #f7eacd;
   --important: #b40808;
   --filter: opacity(1), contrast(1);
 
