--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,7 +37,7 @@ body {
   --fontColor: #000000;
   --headerColor: #000000;
   --important: #0000bf;
-  --codeColor: #a80079;
+  --codeColor: #ff7edb;
   --activeLink: #000000;
   --inactiveLink: #999999;
   --codeblockTitle: #f7eacd;
@@ -59,7 +59,6 @@ body.dark {
   --fontColor: #eee;
   --headerColor: eee;
   --important: #9999ff;
-  --codeColor: #ff7edb;
   --activeLink: white;
   --inactiveLink: #808080;
   --codeblockTitle: #fff1d0;
@@ -88,10 +87,13 @@ main {
 }
 
 /* HTML Body */
+.sectionTitle {
+  margin-bottom: 0.25rem;
+}
+
 .post {
   text-decoration: none;
   color: var(--fontColor);
-  font-style: italic;
 }
 
 a {
@@ -109,7 +111,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: normal;
+  font-weight: bold;
   color: var(--headerColor);
   word-wrap: break-word;
   overflow-wrap: break-word;
