--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -78,8 +78,26 @@ main {
 
 /* Menu links */
 .headerLink {
+  position: relative;
   text-decoration: none;
   color: var(--fontColor);
+}
+
+.headerLink::before {
+  content: '';
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: var(--fontColor);
+  transition: 0.4s transform ease-in-out;
+  transform: scale3d(0, 1, 1);
+  transform-origin: 0 50%;
+}
+
+.headerLink:hover::before {
+  transform: scale3d(1, 1, 1);
 }
 
 .headerLink:hover {
@@ -96,12 +114,12 @@ main {
   color: var(--fontColor);
 }
 
-a {
+.external-link {
   text-decoration: underline;
   color: var(--important);
 }
 
-a:hover {
+.external-link:hover {
   text-decoration: none;
 }
 
