--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -165,6 +165,10 @@ figcaption::before {
   font-size: 1rem;
 }
 
+.katex-html {
+  font-size: 1rem;
+}
+
 span.katex-display {
   margin-top: 0;
   margin-bottom: 0.75rem;
