--- a/src/components/mdxelements.module.css
+++ b/src/components/mdxelements.module.css
@@ -45,7 +45,7 @@
 .code {
   font-size: 1rem;
   white-space: nowrap;
-  font-family: 'Share';
+  font-family: 'Share', sans-serif;
   color: var(--codeColor);
   transition: color 0.2s ease-out;
   background-color: rgb(38, 34, 53);
