--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,7 @@
 
 ::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
 
 /* Track */
@@ -187,7 +188,8 @@ td {
   main {
     padding: 0.5rem;
   }
-  table {
+  table,
+  div.math {
     overflow-x: auto;
   }
 }
