--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,7 +41,7 @@ body {
   --codeColor: #ff7edb;
   --activeLink: #000000;
   --inactiveLink: #999999;
-  --filter: opacity(1), contrast(1);
+  --filter: opacity(1) contrast(1);
 
   margin: 0;
   height: 100%;
@@ -55,13 +55,13 @@ body {
 }
 
 body.dark {
-  --backgroundColor: rgb(0, 0, 0, 0.9);
+  --backgroundColor: rgba(0, 0, 0, 0.9);
   --fontColor: #eee;
   --headerColor: eee;
   --important: #9999ff;
   --activeLink: white;
   --inactiveLink: #808080;
-  --filter: opacity(0.8), contrast(1.2);
+  --filter: opacity(0.8) contrast(1.2);
 }
 
 main {
