--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -119,9 +119,10 @@ h6 {
 }
 
 figcaption {
-  font-size: 0.85rem;
+  font-size: 0.75rem;
   font-style: italic;
   text-align: center;
+  color: #999999;
 }
 
 .inlineMath,
