--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -55,6 +55,8 @@ body {
 }
 
 body.dark {
+  -webkit-font-smoothing: antialiased;
+
   --backgroundColor: #101010;
   --fontColor: #eee;
   --headerColor: eee;
@@ -140,30 +142,34 @@ span.katex-display {
 }
 
 /* Markdown code */
-.grvsc-container {
-  padding: 1rem;
+code.grvsc-code {
+  font-size: 1rem;
+  width: 100%;
+}
+
+code.synthwave-84 {
+  font-size: 1rem;
+  white-space: nowrap;
+  font-family: 'Share', sans-serif;
+  color: var(--codeColor);
+  transition: color 0.2s ease-out;
+  padding: 3px 0.5rem;
+  background: #303030;
+}
+
+pre.grvsc-container {
   border-radius: 0 !important;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.38);
+  margin-bottom: 2rem;
   background: #353535 !important;
 }
 
-.grvsc-source {
-  font-size: 1rem;
-  line-height: 1.5;
-  padding: 0 !important;
-  font-family: 'Share', sans-serif;
-}
-
-.gatsby-code-title {
-  width: 30%;
+div.gatsby-code-title {
   background: #353535;
   color: #fff;
-  padding: 0.75rem 1rem 0.75rem 1rem;
-  font-size: 0.85rem;
-  font-weight: bold;
-  border-radius: 0;
-  font-family: 'Share', sans-serif;
-  box-shadow: 4px 0 10px -3px #010101;
+  padding: 0.5rem 0.5rem 0.5rem 1.5rem;
+  font: bold 1rem 'Share', sans-serif;
+  margin-top: 2rem;
+  margin-bottom: 5px;
 }
 
 /* Markdown elements */
