--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -142,6 +142,10 @@ span.katex-display {
 }
 
 /* Markdown code */
+.grvsc-line-number {
+  color: white !important;
+}
+
 code.grvsc-code {
   font-size: 1rem;
   width: 100%;
