--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,6 +41,7 @@ body {
   --codeColor: #ff7edb;
   --activeLink: #000000;
   --inactiveLink: #999999;
+  --bold: #ff9800;
   --filter: opacity(1) contrast(1);
 
   margin: 0;
@@ -63,6 +64,7 @@ body.dark {
   --important: #9999ff;
   --activeLink: white;
   --inactiveLink: #808080;
+  --bold: #ffc166;
   --filter: opacity(0.8) contrast(1.2);
 }
 
@@ -79,6 +81,10 @@ main {
 
 a {
   color: var(--important);
+}
+
+a:hover {
+  text-decoration: none;
 }
 
 /* HTML Body */
@@ -164,12 +170,17 @@ pre.grvsc-container {
 }
 
 div.gatsby-code-title {
+  width: max-content;
   background: #353535;
   color: #fff;
-  padding: 0.5rem 0.5rem 0.5rem 1.5rem;
+  padding: 0.5rem 1.5rem 0.5rem 1.5rem;
   font: bold 1rem 'Share', sans-serif;
   margin-top: 2rem;
   margin-bottom: 5px;
+}
+
+span.grvsc-line-number {
+  color: white;
 }
 
 /* Markdown elements */
