--- a/src/templates/template.module.css
+++ b/src/templates/template.module.css
@@ -4,7 +4,7 @@
 
 .date {
   text-decoration: underline;
-  color: var(--fontColor);
+  color: var(--font-color);
   margin-bottom: 0.5rem;
 }
 
@@ -23,6 +23,6 @@
   font-size: 0.75rem;
   margin-right: 1rem;
   margin-bottom: 0;
-  border: 2px solid var(--fontColor);
+  border: 2px solid var(--font-color);
   padding: 0.4rem;
 }
