--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -16,7 +16,7 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  background: var(--fontColor);
+  background: var(--font-color);
   transition: 0.4s transform ease-in-out;
   transform: scale3d(0, 1, 1);
   transform-origin: 0 50%;
@@ -27,5 +27,5 @@
 }
 
 .footerlink:hover {
-  color: var(--fontColor);
+  color: var(--font-color);
 }
