--- a/src/components/mdxelements.module.css
+++ b/src/components/mdxelements.module.css
@@ -1,9 +1,9 @@
 .em {
-  color: var(--important);
+  color: var(--important-color);
 }
 
 .hr {
-  border-top: 2px solid var(--fontColor);
+  border-top: 2px solid var(--font-color);
 }
 
 .ul,
@@ -20,7 +20,7 @@
 .headers {
   margin-top: 2rem;
   margin-bottom: 1rem;
-  color: var(--headerColor) !important;
+  color: var(--header-color) !important;
 }
 
 .container {
@@ -42,6 +42,6 @@
 }
 
 .strong {
-  color: var(--bold);
+  color: var(--bold-color);
   font-weight: bold;
 }
