--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -155,8 +155,8 @@ span.grvsc-source {
 code.monokai,
 code.synthwave-84 {
   font-size: 1rem;
+  font-family: 'Share', sans-serif !important;
   white-space: nowrap;
-  font-family: 'Share', sans-serif;
   color: var(--codeColor);
   transition: color 0.2s ease-out;
   padding: 3px 0.5rem;
@@ -175,7 +175,7 @@ div.gatsby-code-title {
   background: #353535;
   color: #fff;
   padding: 0.5rem 1.5rem 0.5rem 1.5rem;
-  font: bold 1rem 'Share', sans-serif;
+  font: bold 1rem 'Share', sans-serif !important;
   margin-top: 1rem;
   margin-bottom: 5px;
 }
