--- a/src/templates/template.module.css
+++ b/src/templates/template.module.css
@@ -17,12 +17,12 @@
   display: flex;
   margin: 0 0 1rem 0;
   list-style-type: none;
+  flex-flow: row wrap;
 }
 
 .tag {
   font-size: 0.75rem;
-  margin-right: 1rem;
-  margin-bottom: 0;
   border: 2px solid var(--font-color);
   padding: 0.4rem;
+  margin: 10px 1rem 0 0;
 }
