--- a/src/templates/template.module.css
+++ b/src/templates/template.module.css
@@ -24,5 +24,5 @@
   font-size: 0.75rem;
   border: 2px solid var(--font-color);
   padding: 0.4rem;
-  margin: 10px 1rem 0 0;
+  margin: 0 1rem 10px 0;
 }
