tag hover animation added

--- a/src/pages/posts.module.css
+++ b/src/pages/posts.module.css
@@ -12,20 +12,6 @@
   margin-bottom: 5rem;
 }
 
-.taglist {
-  display: flex;
-  margin: 0;
-  list-style-type: none;
-  flex-flow: row wrap;
-}
-
-.tag {
-  font-size: 0.75rem;
-  padding: 0.4rem;
-  margin: 10px 1rem 0 0;
-  border: 2px solid var(--font-color);
-}
-
 .postblock {
   margin-bottom: 0.5rem;
 }
@@ -47,4 +33,60 @@
 .postlink {
   text-decoration: none;
   color: var(--font-color);
+}
+
+.taglist {
+  display: flex;
+  margin: 0;
+  list-style-type: none;
+  flex-flow: row wrap;
+}
+
+/* Tag animation */
+.tag {
+  font-size: 0.75rem;
+  padding: 0.4rem;
+  margin: 10px 1rem 0 0;
+  border: 2px solid var(--font-color);
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+
+.tag:before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #fff;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: 0 50%;
+  transform-origin: 0 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+
+.tag:hover,
+.tag:focus,
+.tag:active {
+  color: var(--background-color);
+}
+
+.tag:hover:before,
+.tag:focus:before,
+.tag:active:before {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
 }
