--- a/src/templates/template.module.css
+++ b/src/templates/template.module.css
@@ -26,6 +26,7 @@
   padding: 0.4rem;
   margin: 10px 1rem 0 0;
   border: 2px solid var(--font-color);
+  color: var(--font-color);
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
@@ -43,7 +44,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: #fff;
+  background: var(--font-color);
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
   -webkit-transform-origin: 0 50%;
