--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,6 +39,7 @@ body {
   --header-color: #000000;
   --important-color: #0000bf;
   --bold-color: #ff9800;
+  --filter: opacity(1) contrast(1);
 
   margin: 0;
   height: 100%;
@@ -46,8 +47,8 @@ body {
   color: var(--font-color);
   font-family: 'Stratos', sans-serif;
   text-rendering: optimizeLegibility;
+  filter: var(--filter);
   -webkit-font-smoothing: antialiased;
-  filter: opacity(1) contrast(1);
   transition: background 0.5s ease-in-out;
 }
 
@@ -57,6 +58,7 @@ body.dark {
   --header-color: eee;
   --important-color: #9999ff;
   --bold-color: #ffc166;
+  --filter: opacity(0.8) contrast(1.2);
 }
 
 main {
