--- a/src/templates/template.module.css
+++ b/src/templates/template.module.css
@@ -24,7 +24,7 @@
 .tag {
   font-size: 0.75rem;
   padding: 0.4rem;
-  margin: 10px 1rem 0 0;
+  margin: 0 1rem 1rem 0;
   border: 2px solid var(--font-color);
   color: var(--font-color);
   -webkit-transform: perspective(1px) translateZ(0);
