--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -17,6 +17,7 @@
   position: relative;
   text-decoration: none;
   color: var(--font-color);
+  font-family: var(--menu-font) !important;
 }
 
 .headerlink::before {
