--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -146,9 +146,10 @@ span.katex-display {
 }
 
 /* Markdown code */
+code,
 code.grvsc-code {
-  font-size: 0.85rem;
   width: 100%;
+  font-size: 1rem;
 }
 
 span.grvsc-source {
@@ -157,7 +158,6 @@ span.grvsc-source {
 
 code.monokai,
 code.synthwave-84 {
-  font-size: 1rem;
   font-family: 'Share', sans-serif !important;
   white-space: nowrap;
   color: var(--codeColor);
@@ -202,7 +202,6 @@ th {
 
 th,
 td {
-  font-size: 1rem;
   padding: 0.5rem !important;
   border: 2px solid var(--font-color);
 }
@@ -210,7 +209,17 @@ td {
 @media (max-width: 768px) {
   main {
     padding: 0.5rem;
+  }
+  td,
+  th,
+  body,
+  code,
+  code.grvsc-code {
     font-size: 0.8rem !important;
+  }
+  .inlineMath,
+  .katex-html {
+    font-size: 0.9rem;
   }
   table,
   div.math {
