--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -15,7 +15,7 @@
 
 .headerlink {
   position: relative;
-  text-decoration: none;
+  text-decoration: none !important;
   color: var(--font-color);
   font-family: var(--menu-font) !important;
 }
