--- a/src/components/mdxelements.module.css
+++ b/src/components/mdxelements.module.css
@@ -1,7 +1,3 @@
-.em {
-  color: var(--important-color);
-}
-
 .hr {
   border-top: 2px solid var(--font-color);
 }
@@ -22,15 +18,6 @@
   color: var(--header-color) !important;
 }
 
-.container {
-  overflow-x: auto;
-  margin-bottom: 1rem;
-}
-
-.table {
-  margin: auto;
-}
-
 .p {
   line-height: 1.5rem;
   margin-bottom: 1rem;
@@ -42,4 +29,12 @@
 .strong {
   color: var(--bold-color);
   font-weight: bold;
+}
+
+.container {
+  overflow-x: auto;
+}
+
+.table {
+  margin: 0;
 }
