link hover color issue fixed

--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -6,7 +6,7 @@
 .footerlink {
   position: relative;
   color: gray;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 .footerlink::before {
