--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,6 +1,6 @@
 .container {
   margin: 0 auto 0 auto;
-  padding: 0 0 0 0;
+  padding: 0;
   max-width: 75ch;
   justify-content: space-between;
 }
@@ -39,6 +39,6 @@
 
 @media (max-width: 1080px) {
   .container {
-    padding: 0.5rem 0.5rem 0 0.5rem;
+    padding: 0 0.5rem 0 0.5rem;
   }
 }
